force-app/main/default/objects/Accounting_Process__c/Accounting_Process__c.object-meta.xml
<CustomObject>
    <label>Accounting Process</label>
    <nameField>
        <label>Accounting Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>