force-app/main/default/objects/Accounting_Process__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounting Processes</relationshipLabel>
    <relationshipName>Accounting_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>