force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountant Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>