force-app/main/default/objects/Accounting_Process__c/fields/Accountant_assigned_Active__c.field-meta.xml
<CustomField>
    <fullName>Accountant_assigned_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant assigned Active</label>
    <type>Checkbox</type>
</CustomField>