force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Email__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Email__c</fullName>
    <formula>Accountant_Assigned__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned Email</label>
    <type>Text</type>
</CustomField>