force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Mitel_Team__c</fullName>
    <formula>Accountant_Assigned__r.Mitel_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned - Mitel Team</label>
    <type>Text</type>
</CustomField>