force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Office__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Office__c</fullName>
    <formula>TEXT(Accountant_Assigned__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned Office</label>
    <type>Text</type>
</CustomField>