force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Owner_Office_Zone__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Owner_Office_Zone__c</fullName>
    <formula>TEXT(Accountant_Assigned__r.NY_Office_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned Owner (Office Zone)</label>
    <type>Text</type>
</CustomField>