force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Phone__c</fullName>
    <formula>Accountant_Assigned__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned Phone</label>
    <type>Text</type>
</CustomField>