force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Profile__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Profile__c</fullName>
    <formula>Accountant_Assigned__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned Profile</label>
    <type>Text</type>
</CustomField>