force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Assigned_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned_Team_Role__c</fullName>
    <formula>TEXT(Accountant_Assigned__r.Team_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountant Assigned - Team Role</label>
    <type>Text</type>
</CustomField>