force-app/main/default/objects/Accounting_Process__c/fields/Accountant_Credited__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accountant Credited</label>
    <type>Checkbox</type>
</CustomField>