force-app/main/default/objects/Accounting_Process__c/fields/Additional_Filing_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Additional_Filing_Instruction__c</fullName>
    <label>Additional Filing Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>