force-app/main/default/objects/Accounting_Process__c/fields/Additional_Info_Request_Sent_by__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_Request_Sent_by__c</fullName>
    <label>Additional Info Request Sent by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>