force-app/main/default/objects/Accounting_Process__c/fields/Additional_Information_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Request_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Information Request Sent</label>
    <type>Checkbox</type>
</CustomField>