force-app/main/default/objects/Accounting_Process__c/fields/Additional_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Required__c</fullName>
    <label>Additional Information Required</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>