force-app/main/default/objects/Accounting_Process__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account__r.BillingStreet + &quot; &quot; + Account__r.BillingCity + &quot; &quot; + Account__r.BillingState + &quot; &quot; + Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>