force-app/main/default/objects/Accounting_Process__c/fields/Address_Extension__c.field-meta.xml
<CustomField>
    <fullName>Address_Extension__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>