force-app/main/default/objects/Accounting_Process__c/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <label>Analyst</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Daniel Amusin</fullName>
            </value>
            <value>
                <fullName>Ellen Cohen</fullName>
            </value>
            <value>
                <fullName>Ezequiel Alvarez</fullName>
            </value>
            <value>
                <fullName>Franklin Chavarria</fullName>
            </value>
            <value>
                <fullName>Ilona Nowak-Nagy</fullName>
            </value>
            <value>
                <fullName>Iryna Kuznietsova</fullName>
            </value>
            <value>
                <fullName>James Benedith</fullName>
            </value>
            <value>
                <fullName>Jefferey Yu</fullName>
            </value>
            <value>
                <fullName>Josue Hernandez</fullName>
            </value>
            <value>
                <fullName>Kelvin Chen</fullName>
            </value>
            <value>
                <fullName>Lamin Camara</fullName>
            </value>
            <value>
                <fullName>Leslie Haywood</fullName>
            </value>
            <value>
                <fullName>Patrick Lam</fullName>
            </value>
            <value>
                <fullName>Shakira Washington</fullName>
            </value>
            <value>
                <fullName>Stephen Siu</fullName>
            </value>
            <value>
                <fullName>Trisha Wazid</fullName>
            </value>
            <value>
                <fullName>Zain Butt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>