force-app/main/default/objects/Accounting_Process__c/fields/Analyst_Notes_and_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Notes_and_Instruction__c</fullName>
    <label>Analyst Notes and Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>