force-app/main/default/objects/Accounting_Process__c/fields/Any_New_Dependents_for_2017__c.field-meta.xml
<CustomField>
    <fullName>Any_New_Dependents_for_2017__c</fullName>
    <label>Any New Dependents for 2017</label>
    <length>255</length>
    <type>Text</type>
</CustomField>