force-app/main/default/objects/Accounting_Process__c/fields/AP_Count__c.field-meta.xml
<CustomField>
    <fullName>AP_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>