force-app/main/default/objects/Accounting_Process__c/fields/AP_owner_email__c.field-meta.xml
<CustomField>
    <fullName>AP_owner_email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP owner email</label>
    <type>Text</type>
</CustomField>