force-app/main/default/objects/Accounting_Process__c/fields/AP_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>AP_Owner_ID__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Owner ID</label>
    <type>Text</type>
</CustomField>