force-app/main/default/objects/Accounting_Process__c/fields/AP_Owner_Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>AP_Owner_Mitel_Team__c</fullName>
    <formula>Owner:User.Mitel_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Owner - Mitel Team</label>
    <type>Text</type>
</CustomField>