force-app/main/default/objects/Accounting_Process__c/fields/AP_owner_phone__c.field-meta.xml
<CustomField>
    <fullName>AP_owner_phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP owner phone</label>
    <type>Text</type>
</CustomField>