force-app/main/default/objects/Accounting_Process__c/fields/AP_Owner_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>AP_Owner_Team_Role__c</fullName>
    <formula>TEXT(Owner:User.Team_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AP Owner Team Role</label>
    <type>Text</type>
</CustomField>