force-app/main/default/objects/Accounting_Process__c/fields/Are_they_retiring_this_year__c.field-meta.xml
<CustomField>
    <fullName>Are_they_retiring_this_year__c</fullName>
    <label>Are they retiring this year?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>