force-app/main/default/objects/Accounting_Process__c/fields/Aux__c.field-meta.xml
<CustomField>
    <fullName>Aux__c</fullName>
    <label>Auxiliary 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venu</fullName>
            </value>
            <value>
                <fullName>Niveditha</fullName>
            </value>
            <value>
                <fullName>Deepashri</fullName>
            </value>
            <value>
                <fullName>Shodhan</fullName>
            </value>
            <value>
                <fullName>Shruthi</fullName>
            </value>
            <value>
                <fullName>Manasa</fullName>
            </value>
            <value>
                <fullName>Raja Manasa</fullName>
            </value>
            <value>
                <fullName>Mamatha</fullName>
            </value>
            <value>
                <fullName>Sumanth</fullName>
            </value>
            <value>
                <fullName>Pavitra</fullName>
            </value>
            <value>
                <fullName>Shubha</fullName>
            </value>
            <value>
                <fullName>Laxmipathy</fullName>
            </value>
            <value>
                <fullName>Prakash</fullName>
            </value>
            <value>
                <fullName>Shwetha</fullName>
            </value>
            <value>
                <fullName>Abhi Parikh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>