force-app/main/default/objects/Accounting_Process__c/fields/Auxiliary__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auxiliary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes5</relationshipName>
    <type>Lookup</type>
</CustomField>