force-app/main/default/objects/Accounting_Process__c/fields/Auxiliary_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Assigned_Date__c</fullName>
    <label>Auxiliary Assigned Date</label>
    <type>DateTime</type>
</CustomField>