force-app/main/default/objects/Accounting_Process__c/fields/Awaiting_Client_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Client_Approval_Completed__c</fullName>
    <formula>((Sent_to_Completed__c-Sent_to_Awaiting_Client_Approval__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Awaiting Client Approval - Completed</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>