force-app/main/default/objects/Accounting_Process__c/fields/Awaiting_Client_Approval_sent_by__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Client_Approval_sent_by__c</fullName>
    <label>Awaiting Client Approval sent by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>