force-app/main/default/objects/Accounting_Process__c/fields/Beginning_Balances_input__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balances_input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beginning Balances input</label>
    <type>Checkbox</type>
</CustomField>