force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeper_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookkeeper Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Processes7</relationshipName>
    <type>Lookup</type>
</CustomField>