force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeper_Assigned_Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned_Mitel_Team__c</fullName>
    <formula>Bookkeeper_Assigned__r.Mitel_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookkeeper Assigned - Mitel Team</label>
    <type>Text</type>
</CustomField>