force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeper_Assigned_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned_Phone__c</fullName>
    <formula>Bookkeeper_Assigned__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookkeeper Assigned Phone</label>
    <type>Text</type>
</CustomField>