force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeper_Assigned_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned_Team_Role__c</fullName>
    <formula>TEXT(Bookkeeper_Assigned__r.Team_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookkeeper Assigned Team Role</label>
    <type>Text</type>
</CustomField>