force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeping_File_created__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_File_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookkeeping File created</label>
    <type>Checkbox</type>
</CustomField>