force-app/main/default/objects/Accounting_Process__c/fields/bookkeeping_interval__c.field-meta.xml
<CustomField>
    <fullName>bookkeeping_interval__c</fullName>
    <label>Bookkeeping Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>