force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeping_login_password__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_login_password__c</fullName>
    <formula>&quot;1800Acct&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookkeeping login password</label>
    <type>Text</type>
</CustomField>