force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeping_Onboarding_completed__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Onboarding_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookkeeping Onboarding completed</label>
    <type>Checkbox</type>
</CustomField>