force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeping_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Quarter__c</fullName>
    <label>Bookkeeping Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
            <value>
                <fullName>2016 Q1</fullName>
                <isActive>false</isActive>
                <label>2016 Q1</label>
            </value>
            <value>
                <fullName>2016 Q2</fullName>
                <isActive>false</isActive>
                <label>2016 Q2</label>
            </value>
            <value>
                <fullName>2016 Q3</fullName>
                <isActive>false</isActive>
                <label>2016 Q3</label>
            </value>
            <value>
                <fullName>2016 Q4</fullName>
                <isActive>false</isActive>
                <label>2016 Q4</label>
            </value>
            <value>
                <fullName>2017 Q1</fullName>
                <isActive>false</isActive>
                <label>2017 Q1</label>
            </value>
            <value>
                <fullName>2017 Q2</fullName>
                <isActive>false</isActive>
                <label>2017 Q2</label>
            </value>
            <value>
                <fullName>2017 Q3</fullName>
                <isActive>false</isActive>
                <label>2017 Q3</label>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
                <isActive>false</isActive>
                <label>2017 Q4</label>
            </value>
            <value>
                <fullName>2018 Q1</fullName>
                <isActive>false</isActive>
                <label>2018 Q1</label>
            </value>
            <value>
                <fullName>2018 Q2</fullName>
                <isActive>false</isActive>
                <label>2018 Q2</label>
            </value>
            <value>
                <fullName>2018 Q3</fullName>
                <isActive>false</isActive>
                <label>2018 Q3</label>
            </value>
            <value>
                <fullName>2018 Q4</fullName>
                <isActive>false</isActive>
                <label>2018 Q4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>