force-app/main/default/objects/Accounting_Process__c/fields/Bookkeeping_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Team_Notes__c</fullName>
    <label>Bookkeeping Team Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>