force-app/main/default/objects/Accounting_Process__c/fields/BTP_2016__c.field-meta.xml
<CustomField>
    <fullName>BTP_2016__c</fullName>
    <formula>Account__r.X2016_Business_Tax_Prep_purchased_LZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTP - 2016</label>
    <type>Checkbox</type>
</CustomField>