force-app/main/default/objects/Accounting_Process__c/fields/BTP_2017__c.field-meta.xml
<CustomField>
    <fullName>BTP_2017__c</fullName>
    <formula>Contact__r.X2017_LZ_BTP_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTP 2017</label>
    <type>Checkbox</type>
</CustomField>