force-app/main/default/objects/Accounting_Process__c/fields/BTP__c.field-meta.xml
<CustomField>
    <fullName>BTP__c</fullName>
    <formula>Account__r.Business_Tax_Prep_purchased_through_LZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTP 2015</label>
    <type>Checkbox</type>
</CustomField>