force-app/main/default/objects/Accounting_Process__c/fields/Business_email_template__c.field-meta.xml
<CustomField>
    <fullName>Business_email_template__c</fullName>
    <label>Business (email template)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>