force-app/main/default/objects/Accounting_Process__c/fields/Business_Formation_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Formation_Date__c</fullName>
    <label>Business Formation Date</label>
    <type>Date</type>
</CustomField>