force-app/main/default/objects/Accounting_Process__c/fields/Business_Formation_State__c.field-meta.xml
<CustomField>
    <fullName>Business_Formation_State__c</fullName>
    <label>Business Formation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>