force-app/main/default/objects/Accounting_Process__c/fields/Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Business_Income__c</fullName>
    <label>Business Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>