force-app/main/default/objects/Accounting_Process__c/fields/Business_Names__c.field-meta.xml
<CustomField>
    <fullName>Business_Names__c</fullName>
    <label>Business Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>