force-app/main/default/objects/Accounting_Process__c/fields/Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure__c</fullName>
    <label>Business Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>