force-app/main/default/objects/Accounting_Process__c/fields/Cancelled_date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_date__c</fullName>
    <formula>Account__r.Cancelled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancelled date</label>
    <type>Date</type>
</CustomField>