force-app/main/default/objects/Accounting_Process__c/fields/Change_in_Filing_Status_in_2017__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Filing_Status_in_2017__c</fullName>
    <label>Change in Filing Status in 2017</label>
    <length>255</length>
    <type>Text</type>
</CustomField>