force-app/main/default/objects/Accounting_Process__c/fields/City_County__c.field-meta.xml
<CustomField>
    <fullName>City_County__c</fullName>
    <label>City / County</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>All City / County</fullName>
            </value>
            <value>
                <fullName>Junction</fullName>
            </value>
            <value>
                <fullName>Avondale</fullName>
            </value>
            <value>
                <fullName>Chandler</fullName>
            </value>
            <value>
                <fullName>Douglas</fullName>
            </value>
            <value>
                <fullName>Flagstaff</fullName>
            </value>
            <value>
                <fullName>Glendale</fullName>
            </value>
            <value>
                <fullName>Mesa</fullName>
            </value>
            <value>
                <fullName>Nogales</fullName>
            </value>
            <value>
                <fullName>Peoria</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Prescott</fullName>
            </value>
            <value>
                <fullName>Scottsdale</fullName>
            </value>
            <value>
                <fullName>Sedona</fullName>
            </value>
            <value>
                <fullName>Tempe</fullName>
            </value>
            <value>
                <fullName>Tucson</fullName>
            </value>
            <value>
                <fullName>Alamosa</fullName>
            </value>
            <value>
                <fullName>Arvada</fullName>
            </value>
            <value>
                <fullName>Aspen</fullName>
            </value>
            <value>
                <fullName>Aurora</fullName>
            </value>
            <value>
                <fullName>Avon</fullName>
            </value>
            <value>
                <fullName>Black Hawk3</fullName>
            </value>
            <value>
                <fullName>Boulder</fullName>
            </value>
            <value>
                <fullName>Breckenridge</fullName>
            </value>
            <value>
                <fullName>Brighton</fullName>
            </value>
            <value>
                <fullName>Broomfield</fullName>
            </value>
            <value>
                <fullName>Broomfield Flatiron</fullName>
            </value>
            <value>
                <fullName>Broomfield Arista</fullName>
            </value>
            <value>
                <fullName>Canon City</fullName>
            </value>
            <value>
                <fullName>Carbondale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>