force-app/main/default/objects/Accounting_Process__c/fields/Client_Login__c.field-meta.xml
<CustomField>
    <fullName>Client_Login__c</fullName>
    <label>Client Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>