force-app/main/default/objects/Accounting_Process__c/fields/clientbooks_Bookkeeping_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>clientbooks_Bookkeeping_Start_Date__c</fullName>
    <label>ClientBooks Bookkeeping Start Date</label>
    <type>Date</type>
</CustomField>