force-app/main/default/objects/Accounting_Process__c/fields/completed_sent_by__c.field-meta.xml
<CustomField>
    <fullName>completed_sent_by__c</fullName>
    <label>Completed sent By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>