force-app/main/default/objects/Accounting_Process__c/fields/Confirm_W2_Wages_Other_income_from_PY__c.field-meta.xml
<CustomField>
    <fullName>Confirm_W2_Wages_Other_income_from_PY__c</fullName>
    <label>Confirm W2 Wages &amp; Other income from PY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>