force-app/main/default/objects/Accounting_Process__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounting Processes</relationshipLabel>
    <relationshipName>Accounting_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>