force-app/main/default/objects/Accounting_Process__c/fields/Contact_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_Number__c</fullName>
    <formula>Contact__r.Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Customer Number</label>
    <type>Text</type>
</CustomField>