force-app/main/default/objects/Accounting_Process__c/fields/Credit_Card_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Accounts__c</fullName>
    <label>Credit Card Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>