force-app/main/default/objects/Accounting_Process__c/fields/DAY__c.field-meta.xml
<CustomField>
    <fullName>DAY__c</fullName>
    <formula>DAY(VTO_submitted_Day__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>