force-app/main/default/objects/Accounting_Process__c/fields/Document_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Received_Date__c</fullName>
    <label>Document Received Date</label>
    <type>Date</type>
</CustomField>