force-app/main/default/objects/Accounting_Process__c/fields/EIN_Extension__c.field-meta.xml
<CustomField>
    <fullName>EIN_Extension__c</fullName>
    <label>EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>