force-app/main/default/objects/Accounting_Process__c/fields/Entitled_to_2017_Personal_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>Entitled_to_2017_Personal_Tax_Return__c</fullName>
    <formula>Account__r.VTO_Personal_2017__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitled to 2017 Personal Tax Return</label>
    <type>Checkbox</type>
</CustomField>