force-app/main/default/objects/Accounting_Process__c/fields/Entity_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>Entity_Tax_Classification__c</fullName>
    <formula>TEXT( Account__r.Entity_Tax_Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Tax Classification</label>
    <type>Text</type>
</CustomField>