force-app/main/default/objects/Accounting_Process__c/fields/Est_Tax_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Est_Tax_Quarter__c</fullName>
    <label>Est Tax Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2015 Q1</fullName>
            </value>
            <value>
                <fullName>2015 Q2</fullName>
            </value>
            <value>
                <fullName>2015 Q3</fullName>
            </value>
            <value>
                <fullName>2015 Q4</fullName>
            </value>
            <value>
                <fullName>2016 Q1</fullName>
            </value>
            <value>
                <fullName>2016 Q2</fullName>
            </value>
            <value>
                <fullName>2016 Q3</fullName>
            </value>
            <value>
                <fullName>2016 Q4</fullName>
            </value>
            <value>
                <fullName>2017 Q1</fullName>
            </value>
            <value>
                <fullName>2017 Q2</fullName>
            </value>
            <value>
                <fullName>2017 Q3</fullName>
            </value>
            <value>
                <fullName>2017 Q4</fullName>
            </value>
            <value>
                <fullName>2018 Q1</fullName>
            </value>
            <value>
                <fullName>2018 Q2</fullName>
            </value>
            <value>
                <fullName>2018 Q3</fullName>
            </value>
            <value>
                <fullName>2018 Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>