force-app/main/default/objects/Accounting_Process__c/fields/Est_Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Est_Tax_Status__c</fullName>
    <label>Est Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email sent with organizer</fullName>
                <default>true</default>
                <label>Email sent with organizer</label>
            </value>
            <value>
                <fullName>Follow-up Email Sent</fullName>
            </value>
            <value>
                <fullName>Email received</fullName>
            </value>
            <value>
                <fullName>Calculations made - No Est Tax needed</fullName>
            </value>
            <value>
                <fullName>Called - Left VM</fullName>
            </value>
            <value>
                <fullName>Called - Est Tax not needed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Info Received - Quarter Ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>